[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/_common/GUI/SceneLaunchButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/_common/GUI/Theme/MainGUITheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/MenuScenes/Settings.gd" type="Script" id=3]
[ext_resource path="res://scenes/MenuScenes/VolumeSlider.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/_common/Music/MysteriousLoop.ogg" type="AudioStream" id=5]
[ext_resource path="res://scenes/_common/Music/TenseLoop.mp3" type="AudioStream" id=6]
[ext_resource path="res://scenes/Items/weapons/GunshotNoises/Gun_9mm_9.wav" type="AudioStream" id=7]

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="SettingsTitle" type="Label" parent="VBoxContainer/Header"]
margin_right = 1024.0
margin_bottom = 79.0
size_flags_horizontal = 3
text = "Settings"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_left = 156.0
margin_top = 83.0
margin_right = 868.0
margin_bottom = 520.0
size_flags_horizontal = 4

[node name="Body" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 712.0
margin_bottom = 437.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/PanelContainer/Body"]
margin_right = 708.0
margin_bottom = 368.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="DifficultyLabel" type="Label" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_right = 404.0
margin_bottom = 79.0
text = "Difficulty"

[node name="DifficultySlider" type="HSlider" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_left = 408.0
margin_right = 708.0
margin_bottom = 79.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = 0.5
max_value = 3.0
step = 0.1
value = 1.0

[node name="MasterVolLabel" type="Label" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_top = 83.0
margin_right = 404.0
margin_bottom = 162.0
text = "Master Volume"

[node name="MasterVolSlider" parent="VBoxContainer/PanelContainer/Body/GridContainer" instance=ExtResource( 4 )]
value = 0.5
audio_stream = ExtResource( 5 )

[node name="SFXVolLabel" type="Label" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_top = 166.0
margin_right = 404.0
margin_bottom = 245.0
text = "Sound Effects Volume"

[node name="SFXVolSlider" parent="VBoxContainer/PanelContainer/Body/GridContainer" instance=ExtResource( 4 )]
margin_top = 166.0
margin_bottom = 245.0
value = 0.5
audio_bus_name = "sfx"
audio_stream = ExtResource( 7 )

[node name="MusicVolLabel" type="Label" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_top = 249.0
margin_right = 404.0
margin_bottom = 328.0
text = "Music Volume"

[node name="MusicVolSlider" parent="VBoxContainer/PanelContainer/Body/GridContainer" instance=ExtResource( 4 )]
margin_top = 249.0
margin_bottom = 328.0
value = 0.5
audio_bus_name = "Music"
audio_stream = ExtResource( 6 )

[node name="GoreCheckButton" type="CheckButton" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_left = 142.0
margin_top = 332.0
margin_right = 262.0
margin_bottom = 368.0
focus_mode = 0
size_flags_horizontal = 4
pressed = true
text = "Gore"

[node name="ShakeNFlashButton" type="CheckButton" parent="VBoxContainer/PanelContainer/Body/GridContainer"]
margin_left = 450.0
margin_top = 332.0
margin_right = 666.0
margin_bottom = 368.0
focus_mode = 0
size_flags_horizontal = 4
pressed = true
text = "Shake & Flash"

[node name="ReturnToMainButton" parent="VBoxContainer/PanelContainer/Body" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 272.0
margin_top = 398.0
margin_right = 436.0
margin_bottom = 433.0
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Return To Main"
return_to_main = true

[node name="Footer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 524.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[connection signal="drag_ended" from="VBoxContainer/PanelContainer/Body/GridContainer/DifficultySlider" to="." method="_on_DifficultySlider_drag_ended"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/Body/GridContainer/GoreCheckButton" to="." method="_on_GoreCheckButton_toggled"]
[connection signal="toggled" from="VBoxContainer/PanelContainer/Body/GridContainer/ShakeNFlashButton" to="." method="_on_ShakeNFlashButton_toggled"]
